--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
             font-size: 0.9rem;
         }
     </style>
+    
+<!-- Add script to your app -->
+
+<html>
+    <head>
+        ...
+        <script src='//whephiwums.com/sdk.js' data-zone='9315453' data-sdk='show_9315453'></script>
+    </head>
+    ...
+</html>                
 </head>
 <body>
 
